# LibreDF

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Main.cpp  README.md  tmf.doxyfile  tmf.kdev4
examples/: CMakeLists.txt  Main.cpp  example0.cpp  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example1.cpp  example10.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
examples/basic/: CMakeLists.txt  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp
examples/ehealth/: CMakeLists.txt  ehealth-client.cpp  ehealth-monitor.cpp  sensordisplay.cpp  sensorsender.cpp
examples/libav/: CMakeLists.txt  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp
src/: CMakeLists.txt  Filter.cpp  Pipeline.cpp
src/analyse/: CMakeLists.txt  analyse.cpp  analyse.h  df.cpp  tmf.cpp
src/dataflow/: CMakeLists.txt
src/dataflow/actors/basic/: addition.cpp  addition.h  doubling.cpp  doubling.h  doubling_mr.cpp  doubling_mr.h  duplicate.cpp  duplicate.h  hamilton.cpp  hamilton.h  increment.cpp  increment.h  int_consumer.cpp  int_consumer.h  int_consumer_mr.cpp  int_consumer_mr.h  int_producer.cpp  int_producer.h  int_producer_mr.cpp  int_producer_mr.h  int_vector_consumer.cpp  int_vector_consumer.h  int_vector_producer.cpp  int_vector_producer.h  multiplication.cpp  multiplication.h  remote.cpp  remote.h  string_consumer.cpp  string_consumer.h  string_producer.cpp  string_producer.h  sum.cpp  sum.h
src/dataflow/actors/combinatorics/: hamilton.cpp  hamilton.h  hamilton2.cpp  hamilton2.h  hamiltonian.cpp  hamiltonian.h  sort2.cpp  sort2.h  sort_join.cpp  sort_join.h  sort_split.cpp  sort_split.h
src/dataflow/actors/delay/: delay_actor.cpp  delay_actor.h  delay_actor12.cpp  delay_actor12.h  delay_actor21.cpp  delay_actor21.h  delay_actor_a.cpp  delay_actor_a.h  delay_actor_b.cpp  delay_actor_b.h  delay_actor_c.cpp  delay_actor_c.h  delay_actor_d.cpp  delay_actor_d.h  delay_generic.cpp  delay_generic.h  delay_join.cpp  delay_join.h  delay_sink.cpp  delay_sink.h  delay_sink_join.cpp  delay_sink_join.h  delay_source.cpp  delay_source.h  delay_source_split.cpp  delay_source_split.h  delay_split.cpp  delay_split.h  delay_vector_actor.cpp  delay_vector_actor.h  delay_vector_actor2.cpp  delay_vector_actor2.h  delay_vector_actor2i.cpp  delay_vector_actor2i.h  delay_vector_actor2o.cpp  delay_vector_actor2o.h  delay_vector_join.cpp  delay_vector_join.h  delay_vector_sink.cpp  delay_vector_sink.h  (+4 more)
src/dataflow/actors/design/: boat.cpp  boat.h  circlepacking.cpp  circlepacking.h  drawcircle.cpp  drawcircle.h  drawline.cpp  drawline.h  flower.cpp  flower.h  sketchboard.cpp  sketchboard.h
src/dataflow/actors/machine-learning/: convolution.cpp  convolution.h  pool.cpp  pool.h
src/dataflow/actors/opencv-core/: add.cpp  add.h  compare.cpp  compare.h  dct.cpp  dct.h  dft.cpp  dft.h  gemm.cpp  gemm.h  idct.cpp  idct.h  idft.cpp  idft.h  matjoin.cpp  matjoin.h  matmerge.cpp  matmerge.h  matslice.cpp  matslice.h  matsplit.cpp  matsplit.h  multiply.cpp  multiply.h  randn.cpp  randn.h  randu.cpp  randu.h
src/dataflow/actors/opencv-highgui/: image_read.cpp  image_read.h  image_show.cpp  image_show.h  image_show_join.cpp  image_show_join.h  image_show_mr.cpp  image_show_mr.h  image_sink.cpp  image_sink.h  image_sink_join.cpp  image_sink_join.h  image_sink_mr.cpp  image_sink_mr.h  image_write.cpp  image_write.h  image_write_join.cpp  image_write_join.h  image_write_merge.cpp  image_write_merge.h  image_write_mr.cpp  image_write_mr.h  image_write_unite.cpp  image_write_unite.h  video_capture.cpp  video_capture.h  video_capture_divide.cpp  video_capture_divide.h  video_capture_mr.cpp  video_capture_mr.h  video_capture_slice.cpp  video_capture_slice.h  video_capture_split.cpp  video_capture_split.h  video_writer.cpp  video_writer.h
src/dataflow/actors/opencv-imgproc/: boxfilter.cpp  boxfilter.h  canny.cpp  canny.h  (+17 more)
src/dataflow/core/: actor.cpp  actor.h  actor_factory.cpp  actor_factory.h  affinity.cpp  affinity.h  arithmatic.cpp  arithmatic.h  arithmetic.cpp  arithmetic.h  attribute.cpp  attribute.h  buffer.cpp  buffer.h  bus.cpp  bus.h  client_socket.cpp  client_socket.h  dataflow.cpp  dataflow.h  df.cpp  df.h  edge.cpp  edge.h  event.cpp  event.h  event_observer.cpp  event_observer.h  file_system.cpp  file_system.h  input_port.cpp  input_port.h  input_port_vector.cpp  input_port_vector.h  output_port.cpp  output_port.h  output_port_vector.cpp  output_port_vector.h  placement.cpp  placement.h  (+22 more)
src/dataflow/types/: int.cpp  int.h  integer.cpp  integer.h  str.h
src/deploy/: CMakeLists.txt  deploy.cpp  deploy.h  df-deploy.cpp  tmf-deploy.cpp
src/gcalc/: CMakeLists.txt  gcalc.cpp  graph_calculation.cpp  graph_calculation.h
src/gcomp/: CMakeLists.txt  gcomp.cpp  graph_computation.cpp  graph_computation.h
src/graph/: CMakeLists.txt  actor.cpp  actor.h  edge.cpp  edge.h  graph.cpp  graph.h
src/hamilton/: CMakeLists.txt  hamilton.cpp
src/parser/: CMakeLists.txt  actor.cpp  actor.h  edge.cpp  edge.h  graph.cpp  graph.h  parser.cpp  parser.h
src/rdf/: CMakeLists.txt  README.md  rdataflow.cpp  rdataflow.h  rdf.cpp  rdfanalyse.cpp  rdfanalyse.h  rdfgraph.cpp  rdfgraph.h  rdfparser.cpp  rdfparser.h  rule.cpp  rule.h
src/server/: CMakeLists.txt  df-server.cpp  server.cpp  server.h  tmf-server.cpp
src/shell/: CMakeLists.txt  actor.cpp  actor.h  graph.cpp  graph.h  main.cpp  parser.h  rdfui.cpp  rdfui.h  rule.cpp  rule.h  tdfui.cpp  tdfui.h  tmf-anlys.cpp  tmf-deploy.cpp  tmf-server.cpp  ui.cpp  ui.h
src/shell/analyse/: analyse.cpp  analyse.h
src/shell/deploy/: deploy.cpp  deploy.h
src/shell/parser/: actor.cpp  actor.h  analyser.cpp  analyser.h  graph.cpp  graph.h  parser.cpp  parser.h
src/shell/rdf/: README.md  main.cpp  rdf-anlys.cpp  rdfanalyse.cpp  rdfparser.cpp  rdfparser.h  rdfui.cpp  rdfui.h  rule.h
src/shell/server/: server.h
src/shell/ui/: modules.h  ui.cpp  ui.h
(+820 files in other folders)
