cmake_minimum_required (VERSION 2.6)

project (examples)

add_executable(example00 example00.cpp)
target_link_libraries(example00 tmf)

add_executable(example01 example01.cpp)
target_link_libraries(example01 tmf)

add_executable(example02 example02.cpp)
target_link_libraries(example02 tmf)
    
add_executable(example03 example03.cpp)
target_link_libraries(example03 tmf)

add_executable(example04 example04.cpp)
target_link_libraries(example04 tmf)
    
add_executable(example05 example05.cpp)
target_link_libraries(example05 tmf)

add_executable(example06 example06.cpp)
target_link_libraries(example06 tmf)

add_executable(example4 example4.cpp)
target_link_libraries(example4 tmf)

add_executable(example5 example5.cpp)
target_link_libraries(example5 tmf)

add_executable(example6 example6.cpp)
target_link_libraries(example6 tmf)
