cmake_minimum_required (VERSION 2.6)

project (examples)

add_executable(example00 example00.cpp)
target_link_libraries(example00 tmf)

add_executable(example01 example01.cpp)
target_link_libraries(example01 tmf)

add_executable(example02 example02.cpp)
target_link_libraries(example02 tmf)
    
add_executable(example03 example03.cpp)
target_link_libraries(example03 tmf)

add_executable(example04 example04.cpp)
target_link_libraries(example04 tmf)
    
add_executable(example05 example05.cpp)
target_link_libraries(example05 tmf)

add_executable(example06 example06.cpp)
target_link_libraries(example06 tmf)

add_executable(example07 example07.cpp)
target_link_libraries(example07 tmf)

add_executable(example08 example08.cpp)
target_link_libraries(example08 tmf)

add_executable(example09 example09.cpp)
target_link_libraries(example09 tmf)

add_executable(example10 example10.cpp)
target_link_libraries(example10 tmf)

add_executable(example11 example11.cpp)
target_link_libraries(example11 tmf)

add_executable(example12 example12.cpp)
target_link_libraries(example12 tmf)