cmake_minimum_required (VERSION 2.6)

project (libav_examples)

add_executable(example05 example05.cpp)
target_link_libraries(example05 tmf)

add_executable(example06 example06.cpp)
target_link_libraries(example06 tmf)

add_executable(example07 example07.cpp)
target_link_libraries(example07 tmf)

add_executable(example08 example08.cpp)
target_link_libraries(example08 tmf)

add_executable(example09 example09.cpp)
target_link_libraries(example09 tmf)

add_executable(example10 example10.cpp)
target_link_libraries(example10 tmf)

add_executable(example11 example11.cpp)
target_link_libraries(example11 tmf)

add_executable(example12 example12.cpp)
target_link_libraries(example12 tmf)